--- a/home.html
+++ b/home.html
@@ -49,14 +49,33 @@
 					<img src="images/line.png" class="line" width="148" height="10" alt="">
 				</div>
 				 <div class="download">
-                    <a href=""><img src="images/downios.png" alt=""></a>
-                    <a href=""><img src="images/downand.png" alt=""></a>
+                    <a href=""><img class="ios" src="images/downios.png" alt=""></a>
+                    <a href="" class="android"><img src="images/downand.png" alt=""></a>
                  </div>
 			</div>
 		</div>
 		<!-- 首页视频按钮 -->
 		<div class="videoBtn">
             <img src="images/videoBtnAR.png" alt="">
+        </div>
+        <!-- 视频出现时的透明暗色背景 -->
+        <div class="video">
+        	<div class="video_box">
+        		<object data="https://nie.res.netease.com/comm/js/nie/util/video/img/player.swf?v=2017032302" type="application/x-shockwave-flash" width="800" height="450">
+	            <param name="allowFullScreen" value="true">
+	            <param name="allowscriptaccess" value="always">
+	            <param name="bgcolor" value="#000000">
+	            <param name="flashvars" value="width=800&amp;height=450&amp;wmode=direct&amp;bgcolor=#000000&amp;host=yys.163.com&amp;movieUrl=https://nie.v.netease.com/nie/2017/0518/a7f3a0546e69013b5d039c988d7c458bqt.mp4&amp;HDmovieUrl=&amp;SHDmovieUrl=&amp;vtype=&amp;&amp;&amp;&amp;volume=0.8&amp;autoPlay=true&amp;&amp;loopTimes=0&amp;&amp;bufferTime=5&amp;videoIndex=0&amp;&amp;allowFullScreen=true&amp;fat=">
+	            <param name="movie" value="https://nie.res.netease.com/comm/js/nie/util/video/img/player.swf?v=2017032302">
+           		</object>
+           		<div class="close_btn">
+        			<img src="images/close.png" alt="">
+        		</div>
+        	</div>
+        </div>
+        <!-- 下方的鼠标 -->
+        <div class="down_mouse">
+        	<img src="images/dBtn.png" alt="">
         </div>
 	</div>
 	<script src="js/home.js"></script>
